# Lottery-consultant

./: CMakeLists.txt  README.md  errorHandling.c  fileHandlingFunctions.c  fileHandlingFunctions.h  macrosDefinition.h  main.c  metrics.c  requestHandling.c  utilityFunctions.c
CLion project/: errorHandling.h  metrics.h  requestHandling.c  requestHandling.h  utilityFunctions.h
Consultant/: main.c
Error Handling/: errorHandling.c  errorHandling.h
File Handling/: fileHandlingFunctions.c  fileHandlingFunctions.h
Model/: metrics.c  metrics.h  requestHandling.c  requestHandling.h
Utility/: macrosDefinition.h  utilityFunctions.c  utilityFunctions.h
